feat(sections): implement section component

--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -2,6 +2,7 @@
 
 .btn {
   height: 4rem;
+  min-width: 5.6rem;
   padding: 0 1.6rem;
   margin: 0 0.4rem;
   background-color: transparent;
@@ -40,4 +41,28 @@
 
 .btnIconColor {
   color: $color-secondary;
+}
+
+.btnRaised {
+  background-color: $color-secondary;
+  box-shadow: $box-shadow;
+
+  &:hover {
+    background-color: darken($color-secondary, 5%);
+  }
+  
+  &:active {
+    background-color: darken($color-secondary, 10%);
+    box-shadow: $box-shadow-sm;
+  }
+}
+
+.btnMd {
+  height: 4rem;
+  padding: 0 1.6rem;
+}
+
+.btnLg {
+  height: 4.2rem;
+  padding: 0.4rem 3.2rem;
 }
