--- a/styles/Landing.module.scss
+++ b/styles/Landing.module.scss
@@ -7,15 +7,12 @@
 
 .footer {
   width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
+  min-height: 48rem;
+  background-color: $background-color-dark;
+  color: $font-color-light;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
 }
 
 .footer a {
