feat(sections): implement some sections contents

--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -32,7 +32,7 @@ $color-secondary-dark: #A55700;
 /// @type color
 $font-color: #222222;
 /// @type color
-$font-color-display: #0B1B12;
+$font-color-display: #2c7249;
 /// @type color
 $font-color-secondary: #414141;
 /// @type color
