--- a/components/Section/Section.module.scss
+++ b/components/Section/Section.module.scss
@@ -4,10 +4,23 @@
 .section {
   display: flex;
   flex-flow: column;
+  padding: 4rem 8%;
+}
+
+.sectionPalette__default {
   background-color: $background-color;
-  border: 1px solid $background-color-secondary;
-  padding: 3.2rem 8%;
-  min-height: 30rem;
+}
+
+.sectionPalette__light {
+  background-color: $background-color-light;
+}
+
+.sectionPalette__dark {
+  background-color: $background-color-dark;
+}
+
+.sectionPalette__secondary {
+  background-color: $background-color-secondary;
 }
 
 @include respond(tab-land) {
@@ -29,6 +42,9 @@
 }
 
 .sectionHeadline > h1 {
-  color: $font-color-display;
   border-bottom: 0.6rem solid $color-secondary;
+}
+
+.sectionAttached {
+  padding-top: 0;
 }
