--- a/components/Section/Section.module.scss
+++ b/components/Section/Section.module.scss
@@ -4,7 +4,7 @@
 .section {
   display: flex;
   flex-flow: column;
-  padding: 4rem 8%;
+  padding: 8rem 8%;
 }
 
 .sectionPalette__default {
@@ -20,18 +20,18 @@
 }
 
 .sectionPalette__secondary {
-  background-color: $background-color-secondary;
+  background-color: $color-secondary;
 }
 
 @include respond(tab-land) {
   .section {
-    padding: 0 4%;
+    padding: 4rem 4%;
   }
 }
 
 @include respond(tab-port) {
   .section {
-    padding: 0;
+    padding: 8rem 0;
   }
 }
 
