--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -34,7 +34,8 @@ caption,
 }
 
 /// Text code.
-code {
+code,
+.text--code {
   font-family: 'Fira Code', monospace;
   background-color: #f5f5f6;
   font-size: 1.6rem;
