feat(sections): implement more sections

--- a/components/Section/Axes/Axes.module.scss
+++ b/components/Section/Axes/Axes.module.scss
@@ -1,4 +1,4 @@
-.Axis {
+.Axes {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -6,7 +6,7 @@
   padding: 3.2rem 1.6rem 1.6rem;
 }
 
-.Act {
+.Axis {
   flex: 1;
   text-align: center;
   display: flex;
