--- a/components/Section/Section.module.scss
+++ b/components/Section/Section.module.scss
@@ -19,6 +19,10 @@
   background-color: $background-color-dark;
 }
 
+.sectionPalette__medium {
+  background-color: $background-color-secondary;
+}
+
 .sectionPalette__secondary {
   background-color: $color-secondary;
 }
