--- a/styles/Landing.module.scss
+++ b/styles/Landing.module.scss
@@ -1,4 +1,5 @@
 @import '../styles/base/variables';
+@import '../styles/abstracts/mixins';
 
 .main {
   display: flex;
@@ -6,17 +7,58 @@
 }
 
 .footer {
-  width: 100%;
-  min-height: 48rem;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  padding: 4.8rem;
   background-color: $background-color-dark;
   color: $font-color-light;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-.footer a {
+.footerLogo {
+  // padding-bottom: 1.6rem;
+  border-bottom: 1px solid $color-primary-light
+}
+
+.footerHeadline {
+  padding: 2.4rem 1.6rem 1.6rem;
+  text-align: center;
+  & code {
+    background-color: transparent;
+    padding: 0.8rem;
+  }
+}
+
+.footerRow {
   display: flex;
-  justify-content: center;
+  padding: 0 4.8rem;
   align-items: center;
+  justify-content: center;
+
+  @include respond(phone) {
+    flex-flow: column;
+  }
+
+  & p {
+    margin-top: 1.6rem;
+  }
+}
+
+.footerColumn {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  width: 32rem;
+  padding: 3.2rem;
+
+  & a:hover {
+    color: $color-secondary-light;
+    background-color: transparent;
+  }
+}
+
+.glow {
+  color: $color-primary;
 }
